[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/main/Menu.gd" type="Script" id=1]
[ext_resource path="res://src/Menu.tres" type="Theme" id=2]
[ext_resource path="res://assets/sfx/menu_blip.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/menu_clicked.wav" type="AudioStream" id=4]
[ext_resource path="res://src/levels/Level1.tscn" type="PackedScene" id=5]

[sub_resource type="Theme" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
target_scene = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -112.0
margin_right = 172.0
margin_bottom = -20.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 148.0
margin_bottom = 44.0
theme = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 148.0
margin_bottom = 92.0
theme = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -56.0
margin_right = -16.0
margin_bottom = -32.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 1024.0
margin_bottom = 24.0
theme = ExtResource( 2 )
text = "Euclid Glen C. Magno"
align = 2

[node name="MenuBlip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MenuClicked" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
